// Vitest Snapshot v1

exports[`Accordion > renders correctly with props 1`] = `
<ul
  aria-orientation="horizontal"
  class="horizontal accordion"
  data-v-a0315011=""
>
  
  <li
    class=""
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <img
        data-v-a0315011=""
        src="home.svg"
      />
      <span
        data-v-a0315011=""
      >
        Subpane 1
      </span>
      <img
        data-v-a0315011=""
        src="downchevron.svg"
      />
    </button>
    <!--v-if-->
  </li>
  <li
    class="active"
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <!--v-if-->
      <span
        data-v-a0315011=""
      >
        Subpane 2
      </span>
      <img
        data-v-a0315011=""
        src="upchevron.svg"
      />
    </button>
    <div
      data-v-a0315011=""
    >
      <div
        class="sub-pane"
        data-v-1561e4d2=""
        title="Subpane 2"
      >
        
        <p>
          Subpane 2 content
        </p>
        
      </div>
    </div>
  </li>
  <li
    class=""
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <!--v-if-->
      <span
        data-v-a0315011=""
      >
        Subpane 3
      </span>
      <img
        data-v-a0315011=""
        src="downchevron.svg"
      />
    </button>
    <!--v-if-->
  </li>
  
</ul>
`;

exports[`Accordion > renders correctly with slot 1`] = `
<ul
  aria-orientation="vertical"
  class="vertical accordion"
  data-v-a0315011=""
>
  
  <li
    class="active"
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <img
        data-v-a0315011=""
        src="home.svg"
      />
      <span
        data-v-a0315011=""
      >
        Subpane 1
      </span>
      <!--v-if-->
    </button>
    <div
      data-v-a0315011=""
    >
      <div
        class="sub-pane"
        data-v-1561e4d2=""
        icon="home.svg"
        title="Subpane 1"
      >
        
        <p>
          Subpan 1 content
        </p>
        
      </div>
    </div>
  </li>
  <li
    class=""
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <!--v-if-->
      <span
        data-v-a0315011=""
      >
        Subpane 2
      </span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </li>
  <li
    class=""
    data-v-a0315011=""
  >
    <button
      data-v-a0315011=""
      type="button"
    >
      <!--v-if-->
      <span
        data-v-a0315011=""
      >
        Subpane 3
      </span>
      <!--v-if-->
    </button>
    <!--v-if-->
  </li>
  
</ul>
`;
